--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "heroku-postbuild": "npm run build",
-    "start": "node src/server.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
