--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
 # This is an example of the .env file that you should create in the server folder
 
-DB_CONNECTION_STRING=mongodb://localhost:27017/merntodo # Replace with your own connection string
+MONGODB_URL=mongodb://localhost:27017/merntodo # Replace with your own connection string
 JWT_SECRET=YOUR_JWT_SECRET_GOES_HERE # Replace with your own secret
